tests/rosetta/out/Fortran/anonymous-recursion-1.f90
! Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
program anonymous_recursion_1
  implicit none
    integer :: a
    integer :: b
    integer :: i
      integer :: t
    integer, dimension(9) :: arr0 = (/0,1,2,3,4,5,10,40,-1/)
    integer :: i0
        character(len=100) :: s1
        character(len=100) :: s2
  call main()
  contains
  recursive integer function fib(n) result(res)
    integer, intent(in) :: n
    if ((n < 2)) then
      res = n
      return
    end if
    a = 0
    b = 1
    i = 1
    do while ((i < n))
      t = (a + b)
      a = b
      b = t
      i = (i + 1)
    end do
    res = b
    return
  end function fib
  recursive subroutine main()
    do i0 = 1, 9
      n = arr0(i0)
      if ((n < 0)) then
        print *, 'fib undefined for negative numbers'
      else
        write(s1,'(G0)') n
        write(s2,'(G0)') fib(n)
        print *, trim(trim('fib ' // s1) // ' = ') // s2
      end if
    end do
  end subroutine main
end program anonymous_recursion_1
